# Bulletfrost

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.bat  build_script.py  vcpkg-configuration.json  vcpkg.json
packs/Bulletfrost/: BulletfrostPackConfig.json
packs/Bulletfrost/compounds/: Bulletfrost.json  CollisionOps.json  ConstrainOps.json  RigidBodyOps.json  bullet_solver_template.json  simulate_bullet.json
packs/Bulletfrost/compounds/Collision/: get_source_collision_shapes.json  primitive_collision_shape.json  set_collision_shape.json
packs/Bulletfrost/compounds/Constrain/: construct_rigid_body_constraint.json  init_rigid_body_constraint.json  rigid_body_constraint.json  update_source_constraints.json
packs/Bulletfrost/compounds/RBD/: get_point_rigid_body.json  rigid_body_local_space.json  update_rigid_body_shapes.json  update_source_rigid_bodies.json
packs/Bulletfrost/compounds/Utility/: add_source_to_bullet_scene.json  compute_bounding_box.json  extract_rigid_body_data.json  get_bullet_scene_properties.json  local_space.json  set_bullet_scene.json  set_bullet_scene_properties.json  set_sources.json  should_reset_bullet_scene.json  should_step_bullet_scene.json  step_bullet_scene.json
packs/Bulletfrost/lib/: BulletfrostOps.lib
src/: Bulletfrost.cpp  Bulletfrost.h  BulletfrostExport.h  CMakeLists.txt  CollisionOps.cpp  CollisionOps.h  ConstrainOps.cpp  ConstrainOps.h  ConstrainOpsExport.h  PackConfig.json.in  RigidBodyOps.cpp  RigidBodyOps.h  RigidBodyOpsExport.h
src/compounds/: CMakeLists.txt  bullet_fields.json  bullet_simulation_settings.json  bullet_solver_template.json  simulate_bullet.json
src/compounds/Collision/: geo_collision_shape.json  get_collision_shape.json
src/compounds/Constrain/: constrain_in_radius.json  constraint_motors.json  construct_rigid_body_constraint.json  init_source_constraints.json  update_rigid_body_constraint.json
src/compounds/RBD/: apply_rigid_bodies_to_source.json  init_source_rigid_bodies.json  prep_rigid_body_mesh.json  rigid_bodies_to_points.json  rigid_body_transform.json  set_point_rigid_body.json  source_rigid_bodies.json  source_rigid_body_instances.json
src/compounds/Utility/: add_source_to_bullet_scene.json  apply_fields_to_rigid_bodies.json  apply_rigid_body_state.json  get_bullet_scene.json  get_sources.json  set_bullet_scene_gravity.json  should_reset_bullet_scene.json  should_step_bullet_scene.json  step_bullet_scene.json  transfer_rigid_bodies.json
src/resources/: CMakeLists.txt
src/resources/docs/: CMakeLists.txt  bullet_solver_template.md  step_simulation.md
src/resources/example_graphs/: CMakeLists.txt
src/resources/example_graphs/basic_RBD_01/: basic_RBD_01.json  basic_RBD_01_example.ma
src/resources/example_graphs/chain_02/: chain_02.json  chain_02_example.ma
src/resources/example_graphs/custom_solver_05/: 05_custom_solver_shatter.bob  custom_solver_05.json  custom_solver_05_Maya_materials.ma  custom_solver_05_example.ma
src/resources/example_graphs/custom_solver_05/custom_solver_05_example_cache/: cache.0000.bob  cache.0001.bob  cache.0002.bob  cache.0003.bob  cache.0004.bob  cache.0005.bob  cache.0006.bob  cache.0007.bob  cache.0008.bob  cache.0009.bob  cache.0010.bob  cache.0011.bob  cache.0012.bob  cache.0013.bob  cache.0014.bob  cache.0015.bob  cache.0016.bob  cache.0017.bob  cache.0018.bob  cache.0019.bob  cache.0020.bob  cache.0021.bob  cache.0022.bob  cache.0023.bob  cache.0024.bob  cache.0025.bob  cache.0026.bob  cache.0027.bob  cache.0028.bob  cache.0029.bob  cache.0030.bob  cache.0031.bob  cache.0032.bob  cache.0033.bob  cache.0034.bob  cache.0035.bob  cache.0036.bob  cache.0037.bob  cache.0038.bob  cache.0039.bob  (+81 more)
src/resources/example_graphs/dynamic_collider_03/: dynamic_collider_03.json  dynamic_collider_03_example.ma
src/resources/example_graphs/fields_04/: fields_04.json  fields_04_example.ma
src/resources/example_graphs/robot_06/: robot_06.json  robot_06_example.ma
src/resources/icons/: CMakeLists.txt
vcpkg-custom-triplets/: universal-binary-osx.cmake
