file( GLOB_RECURSE ALL_COMPOUND_JSON_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.json )

set( bulletfrost_compounds )
foreach( compound_json_file ${ALL_COMPOUND_JSON_FILES})
    file(RELATIVE_PATH RELATIVE_PATH_TO_FILE ${CMAKE_CURRENT_SOURCE_DIR} ${compound_json_file})
    get_filename_component(FILE_DIR ${compound_json_file} DIRECTORY)
    if(FILE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR)
        install(FILES ${compound_json_file} DESTINATION ${BULLETFROST_INSTALL_DIR}/compounds/)
    else()
        get_filename_component(REL_DIR_COMPONENT ${RELATIVE_PATH_TO_FILE} DIRECTORY)
        install(FILES ${compound_json_file} DESTINATION ${BULLETFROST_INSTALL_DIR}/compounds/${REL_DIR_COMPONENT})
    endif()
endforeach()
